--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-pandas==2.2.2
-numpy==1.26.4
-yfinance==0.2.38
-scikit-learn==1.4.2
-discord.py==2.3.2
-matplotlib==3.8.4
-pytz==2024.1
-python-dotenv==1.0.1
+pandas
+numpy
+yfinance
+scikit-learn
+discord.py
+matplotlib
+pytz
+python-dotenv
+joblib
+shap
